# mcm-agent

./: .env.example  .gitignore  Makefile  README.md  hubspot_data.json  main.py  pyproject.toml  requirements.txt  server.cjs
app/: __init__.py  config.py  main.py  models.py
app/routes/: campaigns.py  email.py  health.py
app/services/: cache.py  email_client.py  gemini_client.py  hubspot.py  orchestrator.py  prompting.py  validators.py
examples/: christmas_campaign.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AppLayout.tsx  CampaignStepper.tsx  ConfigureMailingDialog.tsx
frontend/src/lib/: api.ts  brand-store.ts  campaign-store.ts  campaigns-list-store.ts  crm-parser.ts  hubspot-contacts-store.ts  hubspot-store.ts  mail-list-store.ts  mock-api.ts
frontend/src/pages/: BrandPage.tsx  CampaignDetailPage.tsx  CampaignsPage.tsx  CreatePage.tsx  Index.tsx  ReviewPage.tsx  SendPage.tsx
frontend/src/test/: email-edit-api.test.ts  email-edit.test.tsx  email-send.test.ts
hubspotserver/: package.json  server.cjs
tests/: conftest.py  test_campaigns.py  test_email.py  test_email_integration.py  test_email_unit.py  test_generate_from_prompt.py  test_integration.py  test_models.py  test_validators.py
